--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,22 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
                     <server>tomcat8.5</server>
-                    <path>/Payments</path>
+                    <path>/Blog</path>
                 </configuration>
                 <executions>
                     <execution>
