--- a/Entities/pom.xml
+++ b/Entities/pom.xml
@@ -12,5 +12,13 @@
     <artifactId>Entities</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
