--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
                 <version>2.8.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.16</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
