--- a/DAO/pom.xml
+++ b/DAO/pom.xml
@@ -28,6 +28,16 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.criticalgnome.blog</groupId>
             <artifactId>Entities</artifactId>
             <version>1.0</version>
