--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
                 <version>${lombok.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
