--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mysql.version>5.1.40</mysql.version>
         <junit.version>4.12</junit.version>
         <log4j2.version>2.8.1</log4j2.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.16.16</lombok.version>
         <servlet.version>3.1.0</servlet.version>
         <jstl.version>1.2</jstl.version>
@@ -79,6 +80,18 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
                 <version>${jstl.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j2.version}</version>
             </dependency>
 
             <dependency>
