Add dbcp dependency into main and dao pom-files Create context xml-file

--- a/DAO/pom.xml
+++ b/DAO/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>aspectjrt</artifactId>
         </dependency>
 
+        <!-- Connections Pool -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+        </dependency>
+
         <!--CgLib-->
         <dependency>
             <groupId>cglib</groupId>
