--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <spring.version>4.3.7.RELEASE</spring.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <pool.version>2.1.1</pool.version>
         <cglib.version>3.2.0</cglib.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
         <mysql.version>5.1.40</mysql.version>
@@ -101,6 +102,13 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
                 <version>${aspectj.version}</version>
+            </dependency>
+
+            <!-- Connections Pool -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-dbcp2</artifactId>
+                <version>${pool.version}</version>
             </dependency>
 
             <!--CgLib-->
