--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!--AspectJ-->
