--- a/DAO/pom.xml
+++ b/DAO/pom.xml
@@ -100,6 +100,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--H2 database-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--Logging system-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
