--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
+        <!--Hibernate framework-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
         <!--Servlet API-->
         <dependency>
             <groupId>javax.servlet</groupId>
