--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <pool.version>2.1.1</pool.version>
         <cglib.version>3.2.0</cglib.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
+        <validation.version>1.1.0.Final</validation.version>
         <mysql.version>5.1.40</mysql.version>
         <log4j2.version>2.8.1</log4j2.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -139,6 +140,13 @@
                 <version>${hibernate.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>5.4.1.Final</version>
+            </dependency>
+
+            <!--EhCache-->
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
