--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -38,6 +38,22 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
+        <!-- Spring security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+        </dependency>
+
         <!--Hibernate framework-->
         <dependency>
             <groupId>org.hibernate</groupId>
