--- a/Web/src/main/webapp/WEB-INF/web.xml
+++ b/Web/src/main/webapp/WEB-INF/web.xml
@@ -58,4 +58,8 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <error-page>
+        <location>/error</location>
+    </error-page>
+
 </web-app>
