--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -120,6 +120,12 @@
             <artifactId>log4j-core</artifactId>
         </dependency>
 
+        <!--Jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
