--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,13 @@
                 <version>${tiles.version}</version>
             </dependency>
 
+            <!--Jackson-->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.8.8.1</version>
+            </dependency>
+
             <!--Lombok library-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
